--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -7,6 +7,7 @@
 	{% endif %}
 
 		<div class="form-group{% if field.errors %} has-error{% elif not field.field.group_errors and field.field.name in result.error_fields %} has-error{% endif %}">
+			{% if field.field.required %}<span class="required">*</span>{% endif %}
 			{% if field.field.choice_list %}
 			<label>{{ field.label }}</label>
 			{% else %}
