Add sibling links at exercise bottom

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -44,6 +44,7 @@
             </div>
             {% endblock %}
         </div>
+        {% block siblings_bottom %}{% endblock %}
     </div>
 </div>
 {% endblock %}
