Emphasize categories better

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -225,3 +225,9 @@ html, body {
 .form-inline .form-group div {
     display: inline-block;
 }
+
+/* results table */
+
+table.results-table .category-row {
+    font-weight: bold;
+}
