--- a/course/templates/course/toc.html
+++ b/course/templates/course/toc.html
@@ -39,22 +39,28 @@
     {% if module.status != 'hidden' %}
     {% with open=module.is_after_open %}
     <li>
+      {% if open %}
         <h3>
-            {% if open %}
             <a href="{{ module|url }}">{{ module }}</a>
-            {% else %}
-            {{ module }}
-            {% if is_course_staff %}
-            <a class="btn btn-default btn-xs" href="{{ module|url }}">
-                <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-                {% trans "Early access" %}
-            </a>
-            {% endif %}
-            {% endif %}
         </h3>
         <p>
             <small>{{ module.opening_time }} &ndash; {{ module.closing_time }}</small>
         </p>
+        {% else %}
+        <h3>
+          {{ module }}
+          {% if is_course_staff %}
+          <a class="btn btn-default btn-xs" href="{{ module|url }}">
+              <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+              {% trans "Early access" %}
+          </a>
+          {% endif %}
+        </h3>
+        <h4>
+            <span class="label label-info">{% trans 'Opens' %} {{ module.opening_time }}</span>
+            <small>&ndash; {{ module.closing_time }}</small>
+        </h4>
+        {% endif %}
         {% include 'course/_module_toc.html' with objects=module.flat_learning_objects %}
     </li>
     {% endwith %}
