Add batch grade by email addresses

--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -50,6 +50,16 @@
       "exercise_id": Z2,
       "submission_time": "2014-09-24 11:50",
       "points": 20
+    },
+    {
+      "students_by_email": [
+        "none@no.email"
+      ],
+      "feedback": "Last one.",
+      "grader": X1,
+      "exercise_id": Z2,
+      "submission_time": "2014-09-24 11:50",
+      "points": 1
     }
   ]
 }
