--- a/access/templates/access/async_accepted.html
+++ b/access/templates/access/async_accepted.html
@@ -18,7 +18,7 @@
 
 {% if result.missing_url %}
 <div class="alert alert-danger">
-  {% url 'access.views.test_result' as surl %}
+  {% url 'test-result' as surl %}
 	{% blocktrans with key="submission_url" url=surl %}
 	Missing the <code>{{ key }}</code> for result delivery!
   The result can be temporarily seen at <a href="{{ url }}">{{ url }}</a>.
