--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -15,7 +15,7 @@
 <h3>{% trans "Available exercises" %}</h3>
 <div class="list-group">
 	{% for exercise in exercises %}
-	<a href="{% url 'access.views.exercise' course.key exercise.key %}" class="list-group-item">
+	<a href="{% url 'exercise' course.key exercise.key %}" class="list-group-item">
 		{{ exercise.title }}
 	</a>
 	{% endfor %}
