--- a/access/templates/access/ready.html
+++ b/access/templates/access/ready.html
@@ -6,7 +6,7 @@
 	<h1>{% trans "Grader ready" %}</h1>
 </div>
 <p>
-	<a href="{% url 'access.views.queue_length' %}" class="btn btn-default btn-sm">
+	<a href="{% url 'queue-length' %}" class="btn btn-default btn-sm">
 		{% trans "Current queue length" %}
 	</a>
 	{% if manager %}
@@ -18,7 +18,7 @@
 <h3>{% trans "Available courses" %}</h3>
 <div class="list-group">
 	{% for course in courses %}
-	<a href="{% url 'access.views.course' course.key %}" class="list-group-item">
+	<a href="{% url 'course' course.key %}" class="list-group-item">
 		{{ course.name }}
 	</a>
 	{% endfor %}
