--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -8,12 +8,17 @@
 
 		{% if not field.field.row_label or field.field.open_table %}
 		<div class="form-group{% if field.errors %} has-error{% elif not field.field.group_errors and field.field.name in result.error_fields %} has-error{% endif %}">
+
 			{% if field.field.required %}<span class="required">*</span>{% endif %}
+
+			{% if field.label %}
 			{% if field.field.choice_list %}
 			<label>{{ field.label }}</label>
 			{% else %}
 			{{ field.label_tag }}
 			{% endif %}
+			{% endif %}
+			
 			{% if result.accepted and not field.field.group_errors and field.field.max_points > 0 %}
 			<span class="badge badge-{% if field.field.name in result.error_fields %}danger{% else %}success{% endif %}">{{ field.field.grade_points }} / {{ field.field.max_points }}</span>
 			{% endif %}
