Add error logging if generated/personal files can not be read. Add a default HTML template for displaying personalized content in the exercise instructions page.

--- a/access/templates/access/accept_files_default.html
+++ b/access/templates/access/accept_files_default.html
@@ -18,6 +18,7 @@
 </div>
 {% endif %}
 
+{% include 'access/personalized_content_default.html' %}
 {% include 'access/accept_files_form.html' %}
 {% endif %}
 {% endblock %}
