--- a/access/templates/access/accept_post_default.html
+++ b/access/templates/access/accept_post_default.html
@@ -10,5 +10,7 @@
 <h1>{% trans "Enter your submission" %}</h1>
 {% endif %}
 
+{% include 'access/personalized_content_default.html' %}
+
 {% include 'access/accept_post_form.html' %}
 {% endblock %}
