--- a/access/templates/access/exercise_frame.html
+++ b/access/templates/access/exercise_frame.html
@@ -8,6 +8,10 @@
 {% block body %}
 <div id="exercise">
 
+	{% if exercise.title %}
+	<h3>{{ exercise.title }}</h3>
+	{% endif %}
+
 	{% if result.error %}
 	<div class="alert alert-danger">
 
