--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -40,61 +40,57 @@
 		<div id="exercise-all">
 
       {% if exercise.is_submittable %}
-			<ul class="exercise-summary nav nav-pills">
-				<li>
-					<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
-						{% trans "Points" %}
-						{% summary_points summary %}
-					</a>
-				</li>
-				<li class="dropdown">
-	    			<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						{% trans "Submissions" %}
-						<span class="badge">
-							{{ summary.get_submission_count }}
-			    			{% if exercise.max_submissions %}
-			    			/ {{ exercise|max_submissions:profile }}
-			    			{% endif %}
-						</span>
-	    				<b class="caret"></b>
-	    			</a>
-			        <ul class="dropdown-menu">
-			        	{% for submission in submissions %}
-			            <li>
-			                <a href="{{ submission|url:'submission-plain' }}">
-			                    {{ forloop.revcounter }}.
-			                    {{ submission.submission_time }}
-			                    {% submission_points submission %}
-			                </a>
-			            </li>
-			        	{% empty %}
-			            <li>
-			                <a href="#">{% trans "No submissions yet" %}</a>
-			            </li>
-			        	{% endfor %}
-			        </ul>
-				</li>
-				<li>
-					<p class="navbar-text navbar-btn">
+			<nav class="exercise-summary navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
+							{% trans "Points" %}
+							{% summary_points summary %}
+						</a>
+					</li>
+					<li class="dropdown">
+		    			<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+							{% trans "Submissions" %}
+							<span class="badge">
+								{{ summary.get_submission_count }}
+				    			{% if exercise.max_submissions %}
+				    			/ {{ exercise|max_submissions:profile }}
+				    			{% endif %}
+							</span>
+		    				<b class="caret"></b>
+		    			</a>
+				        <ul class="dropdown-menu">
+				        	{% for submission in submissions %}
+				            <li>
+				                <a href="{{ submission|url:'submission-plain' }}">
+				                    {{ forloop.revcounter }}.
+				                    {{ submission.submission_time }}
+				                    {% submission_points submission %}
+				                </a>
+				            </li>
+				        	{% empty %}
+				            <li>
+				                <a href="#">{% trans "No submissions yet" %}</a>
+				            </li>
+				        	{% endfor %}
+				        </ul>
+					</li>
+					<p class="navbar-text">
 						<small>
 							{% if exercise.points_to_pass > 0 %}
 							{% blocktrans with points=exercise.points_to_pass %}{{ points }} points required to pass.{% endblocktrans %}
 							{% endif %}
 							{% trans "Deadline" %} {{ module.closing_time }}
 						</small>
-					</p>
-				</li>
-				{% if is_course_staff %}
-			    <li>
-					<p class="navbar-text navbar-btn">
-				    	<a class="btn btn-default btn-xs" href="{{ exercise|url:'submission-list' }}">
+						{% if is_course_staff %}
+						<a class="btn btn-default btn-xs" href="{{ exercise|url:'submission-list' }}">
 							<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 							{% trans "View all submissions" %}
 						</a>
+						{% endif %}
 					</p>
-				</li>
-				{% endif %}
-			</ul>
+				</ul>
+			</nav>
       {% endif %}
 
 			<div class="exercise-response">
