Minor markup improvements

--- a/access/templates/access/accept_files_default.html
+++ b/access/templates/access/accept_files_default.html
@@ -5,7 +5,7 @@
 {% if not result.error %}
 
 {% if not exercise.instructions and not exercise.instructions_file %}
-<h1>{% trans "Select your files for grading" %}</h1>
+<p>{% trans "Select your files for grading" %}</p>
 
 {% else %}
 <div class="instructions">
