--- a/access/templates/access/exercise_frame.html
+++ b/access/templates/access/exercise_frame.html
@@ -9,7 +9,7 @@
 <div id="exercise">
 
 	{% if exercise.title %}
-	<h3>{{ exercise.title }}</h3>
+	<h3 class="exercise-title">{{ exercise.title }}</h3>
 	{% endif %}
 
 	{% if result.error %}
