--- a/course/templates/course/groups.html
+++ b/course/templates/course/groups.html
@@ -56,7 +56,7 @@
       {% for group in groups %}
       <tr>
         <td>{% avatars group.members.all %}</td>
-        <td>{{ group.members.all|profiles }}</td>
+        <td>{{ group.members.all|names }}</td>
         <td>{{ group.timestamp|naturalday }}</td>
       </tr>
       {% empty %}
