--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -21,9 +21,6 @@
             <dt>{% trans "Grade" %}</dt>
             <dd>
                 {{ submission.grade }} / {{ exercise.max_points }}
-                {% if is_course_staff %}
-                <br />({% trans "For staff: original" %} {{ submission.service_points }} / {{ submission.service_max_points }})
-                {% endif %}
             </dd>
 
             {% if submission.late_penalty_applied %}
@@ -34,7 +31,7 @@
             <dt>
                 {% trans "Submitters" %}
             </dt>
-            <dd>{{ submission.submitters.all|profiles }}</dd>
+            <dd>{{ submission.submitters.all|names }}</dd>
         </dl>
     </div>
 </div>
