Make top navigation bar fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     </head>
     <body data-view-tag="{% block view_tag %}{% endblock %}">
         <div class="page-wrap">
-            <nav class="navbar navbar-inverse navbar-static-top">
+            <nav class="topbar navbar navbar-inverse navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
