Translate group feature to Finnish

--- a/course/templates/course/groups.html
+++ b/course/templates/course/groups.html
@@ -28,7 +28,7 @@
     {% csrf_token %}
     <p>
       {% blocktrans %}
-      First, query the personal <strong>join codes</strong> from your group member(s).
+      First, query the personal <strong>join codes</strong> from your other group members.
       Then enter the codes below to form a new group.
       It is sufficient that one group member submits this form.
       {% endblocktrans %}
