--- a/course/templates/course/toc.html
+++ b/course/templates/course/toc.html
@@ -16,19 +16,26 @@
   <form method="post" action="{{ instance|url:'enroll' }}">
     {% csrf_token %}
     {% if instance.view_content_to > 1 %}
-    {% blocktrans with end=instance.enrollment_end %}
-    In order to submit exercises, you must enroll in the course. Enroll by {{ end }}
-    {% endblocktrans %}
+    {% trans "In order to submit exercises, you must enroll in the course." %}
     {% else %}
-    {% blocktrans with end=instance.enrollment_end %}
-    In order to submit exercises and see material, you must enroll in the course. Enroll by {{ end }}
-    {% endblocktrans %}
+    {% trans "In order to submit exercises and see material, you must enroll in the course." %}
     {% endif %}
     <input type="submit" value="{% trans 'Enroll' %}" class="btn btn-info">
+    {% if instance.enrollment_ending_time %}
+    <div>
+      <small>
+        {% blocktrans with end=instance.enrollment_ending_time %}
+        The course enrollment is open until {{ end }}
+        {% endblocktrans %}
+      </small>
+    </div>
+    {% endif %}
   </form>
+  {% elif instance.has_enrollment_closed %}
+  {% trans "Unfortunately, enrolling in the course has ended." %}
   {% else %}
   {% blocktrans with start=instance.enrollment_start end=instance.enrollment_end %}
-  The course enrollment opens {{ start }} and closes {{ end }}
+  The course enrollment opens {{ start }}
   {% endblocktrans %}
   {% endif %}
 {% elif profile %}
